# Serve_component

./: .gitignore  .lightning  .lightningignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  app.py  benchmark.md  client.py  locustfile.py  payload.json  payload.py  requirements.txt  serve.py  setup.cfg  setup.py
.github/workflows/: release-pypi.yml
examples/mlserver/: .gitignore  app.py  client.py  locustfile.py  mnist-svm.joblib  model-settings.json  settings.json
lightning_serve/: __about__.py  __init__.py  components.py  grafana.sh  mlserver.py  proxy.py  router.py  strategy.p  utils.py
lightning_serve/reverse_proxy/: go.mod  go.sum  main.go  main_gin.go  payload.json
lightning_serve/strategies/: __init__.py  ab_testing.py  base.py  blue_green.py  blue_green_v2.py  ramped.py  recreate.py  rollout.py  shadow.py  weighted.py
scripts/: serve.py
