[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=25
    --color=yes
markers =
    integration:Run the integration tests for example
    cloud:Run the cloud tests for example

[coverage:run]
branch = True
concurrency = multiprocessing
parallel = True
omit =
    lightning/setup_tools.py
    hackathon/*
    examples/*
    tests/*
    lightning/demo/*

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    TYPE_CHECKING:

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp,.*yaml
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    W503  # line break before binary operator

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown

[isort]
known_first_party =
    lightning
    tests
line_length = 120
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True

[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = lightning
disallow_untyped_defs = True
ignore_missing_imports = True
