[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=25
    --color=yes
markers =
    integration:Run the integration tests for example
    cloud:Run the cloud tests for example

[coverage:run]
branch = True
concurrency = multiprocessing
parallel = True
omit =
    lightning_serve/setup_tools.py
    tests/*

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    TYPE_CHECKING:

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown

[isort]
known_first_party =
    lightning_serve
    tests
line_length = 120
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True

[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = lightning_serve
disallow_untyped_defs = True
ignore_missing_imports = True
